--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.118.0",
+    "pydantic-settings>=2.11.0",
     "pymongo>=4.15.2",
 ]
