--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "fastapi[standard]>=0.118.0",
     "pydantic-settings>=2.11.0",
     "pymongo>=4.15.2",
+    "python-dotenv>=1.1.1",
 ]
