--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "pymongo>=4.15.2",
     "python-dotenv>=1.1.1",
+    "redis>=5.0.0",
+    "aioredis>=2.0.0",
 ]
