--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     networks:
       - spotify-network
     command: fastapi dev 1-mongodb-app/main.py --host 0.0.0.0 --port 8000
+    env_file:
+      - .env
 
 volumes:
   redis-data:
