--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,28 @@ services:
     networks:
       - spotify-network
 
+  # Neo4j Graph Database
+  neo4j:
+    image: neo4j:5.26-community
+    container_name: spotify-neo4j
+    ports:
+      - "7474:7474"  # HTTP (Browser)
+      - "7687:7687"  # Bolt protocol
+    environment:
+      - NEO4J_AUTH=neo4j/password123
+      - NEO4J_PLUGINS=["apoc"]
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+    volumes:
+      - neo4j-data:/data
+      - neo4j-logs:/logs
+    healthcheck:
+      test: ["CMD-SHELL", "wget --spider -q http://localhost:7474 || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 10
+    networks:
+      - spotify-network
+
   # FastAPI Backend
   backend:
     build:
@@ -48,10 +70,15 @@ services:
       - MONGODB_URL=${MONGODB_URL}
       - REDIS_URL=redis://redis:6379/0
       - CASSANDRA_HOST=cassandra
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=password123
     depends_on:
       redis:
         condition: service_healthy
       cassandra:
+        condition: service_healthy
+      neo4j:
         condition: service_healthy
     volumes:
       - ./backend/1-mongodb-app:/app/1-mongodb-app
@@ -63,6 +90,8 @@ services:
 volumes:
   redis-data:
   cassandra-data:
+  neo4j-data:
+  neo4j-logs:
 
 networks:
   spotify-network:
