--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "aioredis>=2.0.0",
     "cassandra-driver>=3.29.3",
     "neo4j>=5.26.0",
+    "elasticsearch[async]>=8.11.0",
 ]
